--- a/debian/rules
+++ b/debian/rules
@@ -22,7 +22,7 @@ export GCL_ANSI=t
 # https://bugs.launchpad.net/ubuntu/+source/ecl/+bug/317827
 override_dh_auto_configure:
 	./bootstrap
-	dh_auto_configure -- --enable-clisp-exec --enable-ecl --enable-gcl --enable-sbcl-exec LDFLAGS=""
+	dh_auto_configure -- --enable-clisp-exec --enable-ecl --enable-gcl --enable-sbcl-exec --enable-quiet-build LDFLAGS=""
 
 # Tell the debhelper tools to include the index maxima needs in the
 # info directory.
