Ignore all texi files generated from texi.m4
Need to lise them one-by-one because maxima.texi shouldn't be ignored.

--- a/doc/info/.gitignore
+++ b/doc/info/.gitignore
@@ -27,4 +27,99 @@ texi2html.init
 build_html.sh
 tmp_html
 extract_categories.sh
-tmpfile
+tmpfile/Affine.texi
+/Affine.texi
+/Arrays.texi
+/Atensor.texi
+/Bugs.texi
+/Command.texi
+/Constants.texi
+/Ctensor.texi
+/DataTypes.texi
+/Database.texi
+/Debugging.texi
+/Deleted.texi
+/Differential.texi
+/Differentiation.texi
+/Elliptic.texi
+/Equations.texi
+/Evaluation.texi
+/Expressions.texi
+/Function.texi
+/Groups.texi
+/Help.texi
+/Input.texi
+/Integration.texi
+/Introduction.texi
+/Itensor.texi
+/Limits.texi
+/Lists.texi
+/MathFunctions.texi
+/Matrices.texi
+/Miscellaneous.texi
+/Number.texi
+/Numerical.texi
+/Operators.texi
+/Plotting.texi
+/Polynomials.texi
+/Program.texi
+/Rules.texi
+/Runtime.texi
+/Series.texi
+/Simplification.texi
+/Special.texi
+/Symmetries.texi
+/alt-display.texi
+/asympa.texi
+/augmented_lagrangian.texi
+/bernstein.texi
+/bitwise.texi
+/bode.texi
+/celine.texi
+/clebsch_gordan.texi
+/cobyla.texi
+/combinatorics.texi
+/contrib_ode.texi
+/defstruct.texi
+/descriptive.texi
+/diag.texi
+/distrib.texi
+/draw.texi
+/drawdf.texi
+/dynamics.texi
+/engineering-format.texi
+/errormessages.texi
+/ezunits.texi
+/f90.texi
+/finance.texi
+/fractals.texi
+/ggf.texi
+/graphs.texi
+/grobner.texi
+/impdiff.texi
+/interpol.texi
+/lapack.texi
+/lbfgs.texi
+/lindstedt.texi
+/linearalgebra.texi
+/lsquares.texi
+/makeOrders.texi
+/minpack.texi
+/mnewton.texi
+/nset.texi
+/numericalio.texi
+/operatingsystem.texi
+/opsubst.texi
+/orthopoly.texi
+/ratpow.texi
+/romberg.texi
+/simplex.texi
+/simplifications.texi
+/solve_rec.texi
+/stats.texi
+/stirling.texi
+/stringproc.texi
+/to_poly_solve.texi
+/unit.texi
+/wrstcse.texi
+/zeilberger.texi
