--- a/doc/info/include-maxima.texi.in
+++ b/doc/info/include-maxima.texi.in
@@ -17,6 +17,9 @@
 @synindex vr fn
 @synindex cp fn
 
+@c Documentation Category index
+@defindex dc
+
 @setchapternewpage odd
 @c end of header
 
@@ -1008,6 +1011,11 @@ Understanding maxima's output
 @appendix Function and Variable Index
 
 @printindex fn
+
+@node Documentation Categories
+@appendix Documentation Categories
+
+@printindex dc
 
 @page
 @ifhtml
