Add script to build pdf doc, generated by configure.

--- a/configure.ac
+++ b/configure.ac
@@ -1250,6 +1250,7 @@ AC_CONFIG_FILES([xmaxima-local], chmod +x xmaxima-local)
 AC_CONFIG_FILES([tests/test.sh], chmod +x tests/test.sh)
 AC_CONFIG_FILES([doc/info/build_html.sh], chmod +x doc/info/build_html.sh)
 AC_CONFIG_FILES([doc/info/extract_categories.sh], chmod +x doc/info/extract_categories.sh)
+AC_CONFIG_FILES([doc/info/make-pdf.sh], chmod +x doc/info/make-pdf.sh)
 
 # Convert maxima.bat to DOS line ending
 # sed-3.02 in old mingw distribution doesn't support -i or \r
