Need to shift out any option args before processing

--- a/doc/info/make-pdf.sh.in
+++ b/doc/info/make-pdf.sh.in
@@ -20,6 +20,8 @@ do
   esac
 done
 
+shift $((OPTIND-1))
+
 TEXIFILE=$1
 BASEFILE=`basename $TEXIFILE .texi`
 INTERACTION="-interaction=nonstopmode"
