Don't need the filename with m4 anymore

--- a/doc/info/Makefile.am
+++ b/doc/info/Makefile.am
@@ -622,4 +622,4 @@ distclean-local:
 .PHONY: check_texinfo warn_texinfo
 
 %.texi : math.m4 %.texi.m4
-	m4 --prefix-builtins --define m4_filename=$(basename $@) $^ > $@
+	m4 --prefix-builtins $^ > $@
