Correcting GCL flags in RPM spec

--- a/maxima.spec.in
+++ b/maxima.spec.in
@@ -12,7 +12,7 @@
 %define enable_sbcl 0
 %define sbcl_flags --disable-sbcl-exec
 %define enable_gcl 1
-%define gcl_flags --enable-gcl-exec
+%define gcl_flags --enable-gcl
 
 # Options to build language packs
 #  Spanish 
