Don't include Documentation Categories section in info
It confuses build_index.pl somehow so that maxima can't find any
documentation for the functions.  So leave it off.  It's more
important for the info files to work and provide documentation than
for the info reader to have everything.

--- a/doc/info/include-maxima.texi.in
+++ b/doc/info/include-maxima.texi.in
@@ -1007,6 +1007,7 @@ Understanding maxima's output
 
 @printindex fn
 
+@ifnotinfo
 @node Documentation Categories
 @appendix Documentation Categories
 
@@ -1017,6 +1018,7 @@ Understanding maxima's output
 @ifhtml
 @include category.texi
 @end ifhtml
+@end ifnotinfo
 
 @page
 @ifhtml
