Grep for correct text for running tex again
Looks like we should search for "you must run TeX again" to see if we
need to run TeX again to get cross-references (and ToC) for the pdf
file.

--- a/doc/info/make-pdf.sh.in
+++ b/doc/info/make-pdf.sh.in
@@ -39,6 +39,6 @@ set -x
 fi
 
 build
-while ( grep 'Rerun to get cross' $BASEFILE.log ); do
+while ( grep 'you must run TeX again' $BASEFILE.log ); do
     build
 done
