--- a/doc/info/make-pdf.sh.in
+++ b/doc/info/make-pdf.sh.in
@@ -32,7 +32,7 @@ build () {
     fi
     @SED@ --in-place=bak -E 's/^(.*)\{([^!]+)!([^}]+)\}[ ]*$$/\1{\2}{\3}/' $BASEFILE.df
     @SED@ --in-place=bak -E 's/^(.*)\{([^!]+)!([^}]+)\}[ ]*$$/\1{\2}{\3}/' $BASEFILE.dv
-    ./texindex $BASEFILE.??
+    TEXINDEX_AWK=`which "@AWK@"` ./texindex $BASEFILE.??
 }
 
 if [ "$DEBUG" = "yes" ]; then
