Add menu entry for function and variable category indices

--- a/doc/info/include-maxima.texi.in
+++ b/doc/info/include-maxima.texi.in
@@ -217,10 +217,12 @@ and develop DOE Macsyma, now called Maxima.
 @b{Understanding maxima's output}
 * Error and warning messages::  Error and warning messages
 
-@b{Index}
+@b{Indices}
 * Function and Variable Index:: Index.
 @ifhtml
-* Documentation Categories::        Docuemntation categories
+* Documentation Categories for Functions:: Category index for functions
+* Documentation Categories for Variables:: Category index for variables
+* Documentation Categories::        Documentation categories
 @end ifhtml
 
 @comment @detailmenu
