--- a/debian/control
+++ b/debian/control
@@ -130,3 +130,22 @@ Description: Computer algebra system
  Performance-wise it typically lies between clisp and sbcl.
  If more than one maxima is installed at the same time this maxima
  is run if maxima is called as "maxima -l ecl"
+
+Package: maxima-emacs
+Architecture: any
+Depends:  ${shlibs:Depends}, ${misc:Depends}, clisp, maxima-common (= ${binary:Version})
+Recommends: gnuplot-x11, wxmaxima, gnuplot
+Suggests: texmacs, wish
+Replaces: maxima
+Provides: maxima (= ${binary:Version})
+Description: Computer algebra system
+ Maxima is a fully symbolic computation program.  It is full featured
+ doing symbolic manipulation of polynomials, matrices, rational
+ functions, integration, Todd-coxeter methods for finite group
+ analysis, graphing, multiple precision floating point computation.
+ It has a symbolic source level debugger for maxima code.  Maxima is
+ based on the original Macsyma developed at MIT in the 1970s.  It is
+ quite versatile, reasonably powerful and comes with extensive
+ self tests.
+ This package contains imaxima and emaxima, the emacs libraries for
+ maxima.
