emaxima is more useful with auctex.

--- a/debian/control
+++ b/debian/control
@@ -134,7 +134,7 @@ Description: Computer algebra system
 Package: maxima-emacs
 Architecture: any
 Depends:  maxima
-Recommends: gnuplot-x11, gnuplot
+Recommends: gnuplot-x11, gnuplot, auctex
 Suggests: texlive-base
 Description: Computer algebra system
  Maxima is a fully symbolic computation program.  It is full featured
