--- a/debian/control
+++ b/debian/control
@@ -145,5 +145,5 @@ Description: Computer algebra system
  based on the original Macsyma developed at MIT in the 1970s.  It is
  quite versatile, reasonably powerful and comes with extensive
  self tests.
- This package contains imaxima and emaxima, the emacs libraries for
- maxima.
+ This package contains imaxima and emaxima who provide an emacs
+ mode for maxima, each.
