Windows Installer: Automatically find the newest wxMaxima release
Pro:
 - The maxima release no more needs to know the maxima version
   number
 - All updating wxMaxima in the Windows Installer requires from
   now on is building a new Windows Installer.

Contra:
 - Often all version numbers being fixed is an requirement, too.

As my private linux box only contains 4 Gigabytes of RAM and
8 Gigabytes are necessary for building an Windows Installer this
commit is entirely untested, unfortunately.

--- a/crosscompile-windows/wxmaxima/CMakeLists.txt
+++ b/crosscompile-windows/wxmaxima/CMakeLists.txt
@@ -39,11 +39,11 @@ if(USE_WXMAXIMA_GIT)
     )
     install(DIRECTORY ${CMAKE_BINARY_DIR}/wxmaxima/wxmaxima-git-prefix/src/wxmaxima-git-build/${WINDOWS_DRIVELETTER}\:/maxima-${MAXIMAVERSION}/ DESTINATION . COMPONENT wxMaxima)
 else()
+    execute_process(COMMAND curl -s https://github.com/wxMaxima-developers/wxmaxima/releases/latest|grep "browser_download_url.*deb"|cut -d : -f 2,3|tr -d OUTPUT_VARIABLE WXMAXIMA_URL)
     externalproject_add(wxmaxima
         URL "${WXMAXIMA_URL}"
         DOWNLOAD_DIR ${CMAKE_SOURCE_DIR}/downloads
-        DOWNLOAD_NAME wxmaxima-${WXMAXIMAVERSION}.tar.gz
-        URL_MD5 ${WXMAXIMA_MD5}
+        DOWNLOAD_NAME wxmaxima.tar.gz
         DEPENDS wxwidgets
         # search wx-config here - do not use the host wx-config
         # had to set CMAKE_LIBRARY_PATH=/usr/${HOST}/lib - libraries for mingw are installed there, but CMake (>3.8)
