Add the correct xMaxima .desktop file to the tarball.
I *think* this is the issue Viktor found.

(cherry picked from commit a3f099e12c6d768c4e472448a9fa7b2550cc6884)

--- a/desktopintegration/Makefile.am
+++ b/desktopintegration/Makefile.am
@@ -1,6 +1,6 @@
 EXTRA_DIST = x-mac.xml x-maxima-out.xml \
   text-x-maximasession.svg text-x-maxima-out.svg maxima rmaxima xmaxima \
-  xmaxima.desktop
+  net.sourceforge.maxima.xmaxima.desktop
 
 appinfodir = $(datarootdir)/metainfo
 dist_appinfo_DATA = net.sourceforge.maxima.xmaxima.appdata.xml
