A .texi file was missing from the tarball.
(cherry picked from commit 6b1969fdfa1d1b65894d883734a6691dd3dfff31)

--- a/doc/info/Makefile.am
+++ b/doc/info/Makefile.am
@@ -44,7 +44,7 @@ maxima_TEXINFOS = include-maxima.texi category-macros.texi Introduction.texi \
  Runtime.texi Miscellaneous.texi Rules.texi nset.texi Function.texi \
  Program.texi Debugging.texi alt-display.texi asympa.texi \
  augmented_lagrangian.texi bitwise.texi bernstein.texi bode.texi celine.texi \
- clebsch_gordan.texi combinatorics.texi \
+ clebsch_gordan.texi combinatorics.texi odepack.texi \
  cobyla.texi contrib_ode.texi descriptive.texi diag.texi distrib.texi \
  draw.texi drawdf.texi dynamics.texi engineering-format.texi \
  wrstcse.texi ezunits.texi f90.texi finance.texi \
