The RPM build process was more complicated than necessary.
=> Removed the requirement for sudo
=> Remove the requirement for building maxima.spec
   and the tarball manually
=> added a "make rpm" make target

In theory every ci can now test if a rpm package can be built
after every commit ;-)

(cherry picked from commit 9a7730b9b5f23e00fa78c7f02839b15a62bb17ed)

--- a/Makefile.am
+++ b/Makefile.am
@@ -166,6 +166,10 @@ iss: win32-lisp-runtime wxmaxima gnuplot extradocinstall
 
 endif # WIN32
 
+rpm: maxima.spec dist-gzip
+	rpmbuild -ba $(top_srcdir)/maxima.spec --define "_sourcedir $(abs_top_builddir)"
+	rpmbuild -bb $(top_srcdir)/maxima.spec --define "_sourcedir $(abs_top_builddir)"
+
 clean-local:
 	rm -rf bin
 	rm -rf binary
