A new file that was left out on building the .rpm packages.
Don't know what the metainfo for gui applications is good for, though.

(cherry picked from commit c1445d3cd7d4eb647b05f2f9ee1657d2bfd56c05)

--- a/maxima.spec.in
+++ b/maxima.spec.in
@@ -271,6 +271,7 @@ rm -rf $RPM_BUILD_ROOT
 %{_datadir}/bash-completion
 %{_datadir}/pixmaps
 %{_datadir}/mime
+%{_datadir}/metainfo/
 %dir %{_libexecdir}/maxima
 %{_libexecdir}/maxima/*
 %{_infodir}/*
