We forgot to ship some language-specific files in the tarball
As the

   make distcheck

make target doesn't work yet this kind of bug is to be expected
and in fact happens with nearly every release.

As this time the files were language-specific and are only
required if languages were enabled using configure arguments a
"make distcheck" wouldn't have helped, though, this time. And
as many devs build their packages from git (which doesn't have
this omission) it looks like this specific bug is more than
one maxima version old.

This commit should resolve issue #3558.

(cherry picked from commit b7a412df79f94d4d277cd22ac6ff063875051700)

--- a/doc/info/de/Makefile.am
+++ b/doc/info/de/Makefile.am
@@ -5,4 +5,4 @@ langsdir = /de
 
 include ../common-lang.mk
 
-EXTRA_DIST += extract_categories1.awk extract_categories1.sed extract_categories.sh manual.css texi2html.init
+EXTRA_DIST += extract_categories1.awk extract_categories1.sed extract_categories.sh manual.css texi2html.init include-maxima.de.texi
