--- a/doc/info/es/Makefile.am
+++ b/doc/info/es/Makefile.am
@@ -4,4 +4,4 @@ lang = es
 langsdir = /es
 
 include ../common-lang.mk
-EXTRA_DIST += texi2html.init txi-es_ES.tex
+EXTRA_DIST += texi2html.init txi-es_ES.tex include-maxima.texi.in
