--- a/doc/info/pt/Makefile.am
+++ b/doc/info/pt/Makefile.am
@@ -4,4 +4,4 @@ lang = pt
 langsdir = /pt
 
 include ../common-lang.mk
-EXTRA_DIST += texi2html.init txi-pt_PT.tex
+EXTRA_DIST += texi2html.init txi-pt_PT.tex include-maxima.texi.in
