A backwards-compatible maxima.html
The documentation used to begin with the file maxima.html.
Now this file is named maxima_0.html. As there were objections
against this change perhaps it is best to add a file with the
old name that forwards the users to the new one.

(cherry picked from commit e0d454a8fa3527d35f5c9b1a49880c01ec9c0283)

--- a/doc/info/Makefile.am
+++ b/doc/info/Makefile.am
@@ -598,7 +598,7 @@ clean-chm:
 	rm -rf chm
 endif
 
-EXTRA_DIST = texi2html manual.css texi2html.init maxima.texi \
+EXTRA_DIST = texi2html manual.css texi2html.init maxima.texi maxima.html \
     $(genericdirDATA) $(pdffigures) $(macfiles) $(maxima_TEXINFOS) $(figurefiles) \
     create_index build_index.pl maxima-index.lisp docdraw.mac \
     extract_categories1.awk extract_categories1.sed extract_categories.sh check_tab fix_tab \
