--- a/debian/rules
+++ b/debian/rules
@@ -22,8 +22,7 @@ export GCL_ANSI=t
 # https://bugs.launchpad.net/ubuntu/+source/ecl/+bug/317827
 override_dh_auto_configure:
 	if test -f ./bootstrap; then ./bootstrap; fi
-	dh_auto_configure -- --enable-clisp-exec --enable-ecl --enable-sbcl-exec --enable-quiet-build LDFLAGS=""
-# --enable-gcl -enable-lang-de --enable-lang-de-utf8 --enable-lang-es --enable-lang-es-utf8 --enable-lang-pt --enable-lang-pt_BR --enable-lang-pt_BR-utf8 --enable-lang-pt-utf8
+	dh_auto_configure -- --enable-clisp-exec --enable-ecl --enable-sbcl-exec --enable-quiet-build LDFLAGS="" --enable-gcl # -enable-lang-de --enable-lang-de-utf8 --enable-lang-es --enable-lang-es-utf8 --enable-lang-pt --enable-lang-pt_BR --enable-lang-pt_BR-utf8 --enable-lang-pt-utf8
 
 # Tell the debhelper tools to include the index maxima needs in the
 # info directory.
