Tell makeinfo produce maxima_toc.html
Set arg INLINE_CONTENTS=0 for makeinfo so that the table of contents
is produced in maxima_toc.html.  The summary contents is in
maxima_ovr.html.

(From Patrice Dumas, bug-texinfo mailing list Jun 22, 2019.)

(cherry picked from commit 4b58eb3a7e8c849c8ff63b06d6e00ef2c9f9d6da)

--- a/doc/info/build_html.sh.in
+++ b/doc/info/build_html.sh.in
@@ -50,7 +50,7 @@ if [ "$TEXI2HTML" = "makeinfo" ];
 then
     # --no-node-files so we don't have thousands of little html files
     # --force -e 10000 because the category stuff causes lots of errors.
-    TEXIOPT="--html --force -e 10000 --document-lang=en -I . -I .. -I @abs_srcdir@ --css-include=@abs_srcdir@/manual.css --init-file ../texi2html.init"
+    TEXIOPT="--html -c INLINE_CONTENTS=0 --force -e 10000 --document-lang=en -I . -I .. -I @abs_srcdir@ --css-include=@abs_srcdir@/manual.css --init-file ../texi2html.init"
     $TEXI2HTML --split=chapter --no-node-files --output="@abs_builddir@/tmp_html" $TEXIOPT maxima.texi 
     $TEXI2HTML --no-split --output="@abs_builddir@/maxima_singlepage.html" $TEXIOPT maxima.texi 
 else
