Maxima html files depend on texi2html.init
(cherry picked from commit 6537714be8c0bc0f2c91aea0089467bf286d0926)

--- a/doc/info/Makefile.am
+++ b/doc/info/Makefile.am
@@ -532,7 +532,7 @@ maxima-index.lisp: build_index.pl maxima.info
 
 DOLLAR_SIGN = $$
 
-maxima_toc.html: maxima.texi $(maxima_TEXINFOS) $(figurefiles) manual.css
+maxima_toc.html: maxima.texi $(maxima_TEXINFOS) $(figurefiles) manual.css texi2html.init
 	@: sh $(srcdir)/extract_categories.sh maxima
 	./build_html.sh
 
