Fix an error when doing an out of source build.

--- a/interfaces/xmaxima/doc/Makefile.am
+++ b/interfaces/xmaxima/doc/Makefile.am
@@ -8,8 +8,8 @@ info_TEXINFOS = xmaxima.texi
 
 all-local: xmaxima.html
 
-xmaxima.html : xmaxima.texi $(top_srcdir)/doc/info/texi2html.init $(top_srcdir)/doc/info/manual.css
-	$(MAKEINFO) --html -c TEXI2HTML=1 --split=chapter --document-lang=en --output=. --css-include=$(top_srcdir)/doc/info/manual.css --init-file  $(top_srcdir)/doc/info/texi2html.init  $<
+xmaxima.html : xmaxima.texi $(top_builddir)/doc/info/texi2html.init $(top_srcdir)/doc/info/manual.css
+	$(MAKEINFO) --html -c TEXI2HTML=1 --split=chapter --document-lang=en --output=. --css-include=$(top_srcdir)/doc/info/manual.css --init-file  $(top_builddir)/doc/info/texi2html.init  $<
 
 htmlname = xmaxima
 htmlinstdir = $(xmaximadir)/html
