In documentation categories processing, avoid collisions between categorized items by prepending the file name base to the item name, so that items which have the same name in different files are distinguished.
(cherry picked from commit 9ac3821445a87230bddc842364bdfef7e9f27bd4)

--- a/doc/info/build_html.sh.in
+++ b/doc/info/build_html.sh.in
@@ -34,10 +34,16 @@ cd tmp_html
 
 for f in @abs_srcdir@/*.texi
 do
-  @SED@ -e 's/^@\(deffn\|defvr\)  *{[^}]*}  *\([^[:blank:]]*\).*/@anchor{Item: \2}\n&/;' -e 's/^@node  *\([^,]*\).*/@anchor{Item: \1}\n&/' $f > $(basename $f)
+  filenamebase=`echo $f | @SED@ -e 's/^.*\///;s/\.texi//'`
+  @SED@ -e "s/^@\(deffn\|defvr\)  *{[^}]*}  *\([^[:blank:]]*\).*/@anchor{Item: $filenamebase\/\2}\n&/;" -e "s/^@node  *\([^,]*\).*/@anchor{Item: $filenamebase\/\1}\n&/" $f > $(basename $f)
 done 
 
-cat *.texi | @AWK@ '!/^@c / && !/^@c$/ && (/^@deffn/ || /^@defvr/ || /^@end deffn/ || /^@end defvr/ || /@category/ || /@node/)' | @SED@ -f @abs_srcdir@/extract_categories1.sed | @AWK@ -f @abs_srcdir@/extract_categories1.awk > make-categories.py 
+for f in *.texi
+do
+  filenamebase=`echo $f | @SED@ -e 's/^.*\///;s/\.texi//'`
+  echo "filenamebase = \"$filenamebase\""
+  cat $f
+done | @AWK@ '!/^@c / && !/^@c$/ && (/^@deffn/ || /^@defvr/ || /^@end deffn/ || /^@end defvr/ || /@category/ || /@node/ || /^filenamebase/)' | @SED@ -f @abs_srcdir@/extract_categories1.sed | @AWK@ -f @abs_srcdir@/extract_categories1.awk > make-categories.py 
 python make-categories.py 
 @SED@ -e 's/^@bye/@node Documentation Categories, , Function and Variable Index\n@chapter Documentation Categories/' @abs_srcdir@/maxima.texi > maxima.texi 
 ( for f in Category-*.texi; do echo '@include' $f; done ; echo @bye ) >> maxima.texi 
