Changed some SF URLs to https.

--- a/crosscompile-windows/gnuplot/CMakeLists.txt
+++ b/crosscompile-windows/gnuplot/CMakeLists.txt
@@ -16,12 +16,12 @@ if(BUILD_64BIT)
     set(GNUPLOTVERSION "5.2.8")
     string(REPLACE "." "" GNUPLOTVERSIONWITHOUTDOTS "${GNUPLOTVERSION}")
     set(GNUPLOT_MD5 "52ae95413ecc37edd3d94f5d67d1b654")
-    set(GNUPLOT_URL "http://sourceforge.net/projects/gnuplot/files/gnuplot/${GNUPLOTVERSION}/gp${GNUPLOTVERSIONWITHOUTDOTS}-win64-mingw.7z")
+    set(GNUPLOT_URL "https://sourceforge.net/projects/gnuplot/files/gnuplot/${GNUPLOTVERSION}/gp${GNUPLOTVERSIONWITHOUTDOTS}-win64-mingw.7z")
 else()
     set(GNUPLOTVERSION "5.2.7")
     string(REPLACE "." "" GNUPLOTVERSIONWITHOUTDOTS "${GNUPLOTVERSION}")
     set(GNUPLOT_MD5 "228d25b13e4ce7358a99edc7efa574be")
-    set(GNUPLOT_URL "http://sourceforge.net/projects/gnuplot/files/gnuplot/${GNUPLOTVERSION}/gp${GNUPLOTVERSIONWITHOUTDOTS}-win32-mingw.7z")
+    set(GNUPLOT_URL "https://sourceforge.net/projects/gnuplot/files/gnuplot/${GNUPLOTVERSION}/gp${GNUPLOTVERSIONWITHOUTDOTS}-win32-mingw.7z")
 endif()
 
 # Gnuplot (already a binary package just extract it...)
