--- a/debian/rules
+++ b/debian/rules
@@ -7,6 +7,8 @@ export MAXIMA_USERDIR=$PWD/debian/tmp
 # GCL comes in two flavours. We need the ANSI one.
 export GCL_ANSI=t
 
+export LD_PRELOAD=$(shell gcc -print-file-name=libSegFault.so)
+
 # The standard rule.
 %:
 	dh $@
@@ -22,7 +24,7 @@ export GCL_ANSI=t
 # https://bugs.launchpad.net/ubuntu/+source/ecl/+bug/317827
 override_dh_auto_configure:
 	./bootstrap
-	dh_auto_configure -- --enable-clisp-exec --enable-ecl --enable-sbcl-exec --enable-quiet-build LDFLAGS="" -enable-lang-de --enable-lang-de-utf8 --enable-lang-es --enable-lang-es-utf8 --enable-lang-pt --enable-lang-pt_BR --enable-lang-pt_BR-utf8 --enable-lang-pt-utf8
+	dh_auto_configure -- --enable-clisp-exec --enable-ecl --enable-gcl --enable-sbcl-exec --enable-quiet-build LDFLAGS="" -enable-lang-de --enable-lang-de-utf8 --enable-lang-es --enable-lang-es-utf8 --enable-lang-pt --enable-lang-pt_BR --enable-lang-pt_BR-utf8 --enable-lang-pt-utf8
 
 # Tell the debhelper tools to include the index maxima needs in the
 # info directory.
